@@ -54,7 +54,8 @@
 
   <!-- default arguments to pass to JVM executing tests -->
   <property name="args" value=""/>
-
+  <property name="threadsPerProcessor" value="1" />
+    
   <property name="javac.deprecation" value="off"/>
   <property name="javac.debug" value="on"/>
   <property name="javac.source" value="1.5"/>
@@ -418,7 +419,7 @@
 	    This is very loud and obnoxious. abuse touch instead for a "quiet" mkdir
 	    -->
     	<touch file="@{tempDir}/@{pattern}/quiet.ant" verbose="false" mkdirs="true"/>
-	    <junit printsummary="off" haltonfailure="no" maxmemory="512M"
+	    <junit printsummary="off" haltonfailure="no" maxmemory="512M" tempdir="@{tempDir}/@{pattern}"
 	      errorProperty="tests.failed" failureProperty="tests.failed" forkmode="perBatch" dir=".">
 	      <classpath refid="@{junit.classpath}"/>
 	      <assertions>
@@ -479,7 +480,7 @@
   </target>
 
   <target name="junit-parallel" unless="runsequential">
-    <parallel threadsPerProcessor="2">
+    <parallel threadsPerProcessor="${threadsPerProcessor}">
      <test-macro pattern="A"/>
      <test-macro pattern="B"/>
      <test-macro pattern="C"/>
